[gd_scene load_steps=14 format=2]

[ext_resource path="res://res/buttons/BackButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/buttons/FowardButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/Assets/Popup/Menu/Window_help.png" type="Texture" id=3]
[ext_resource path="res://res/Assets/Popup/Menu/Texto_Pag2.png" type="Texture" id=4]
[ext_resource path="res://res/Assets/Popup/Menu/Pag1.png" type="Texture" id=5]
[ext_resource path="res://res/popups/popup_help.gd" type="Script" id=6]
[ext_resource path="res://res/Assets/Popup/Menu/Texto_Pag3.png" type="Texture" id=7]
[ext_resource path="res://res/Assets/Popup/Menu/Pag2.png" type="Texture" id=8]
[ext_resource path="res://res/Assets/Popup/Menu/Pag4.png" type="Texture" id=9]
[ext_resource path="res://res/Assets/Popup/Menu/Pag3.png" type="Texture" id=10]
[ext_resource path="res://res/Assets/Popup/Menu/Texto_Pag1.png" type="Texture" id=11]
[ext_resource path="res://res/Assets/Popup/Menu/Texto_Pag4.png" type="Texture" id=12]
[ext_resource path="res://res/Assets/Popup/Sair.png" type="Texture" id=14]

[node name="PopupHelp" type="Popup"]
visible = true
margin_left = 600.0
margin_top = 228.0
margin_right = 1495.0
margin_bottom = 788.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 895.0
margin_bottom = 560.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 17.0
margin_top = 62.0
margin_right = 856.0
margin_bottom = 487.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page" type="HBoxContainer" parent="Menu"]
margin_right = 839.0
margin_bottom = 401.0
size_flags_vertical = 3
custom_constants/separation = 48
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Page"]
margin_left = 12.0
margin_right = 72.0
margin_bottom = 401.0
alignment = 1

[node name="BackButton" parent="Menu/Page/VBoxContainer" instance=ExtResource( 1 )]
modulate = Color( 0.266667, 0.266667, 0.266667, 1 )
margin_top = 161.0
margin_bottom = 239.0

[node name="FirstPage" type="HBoxContainer" parent="Menu/Page"]
margin_left = 120.0
margin_right = 719.0
margin_bottom = 401.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="Menu/Page/FirstPage"]
margin_right = 599.0
margin_bottom = 401.0
rect_min_size = Vector2( 599, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/Page/FirstPage/CenterContainer"]
margin_top = 70.0
margin_right = 599.0
margin_bottom = 330.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 11 )
stretch_mode = 1

[node name="SecondPage" type="HBoxContainer" parent="Menu/Page"]
visible = false
margin_left = 130.0
margin_right = 709.0
margin_bottom = 401.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/Page/SecondPage"]
margin_right = 599.0
margin_bottom = 401.0
rect_min_size = Vector2( 599, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/Page/SecondPage/CenterContainer"]
margin_left = 10.0
margin_top = 30.0
margin_right = 589.0
margin_bottom = 370.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="ThirdPage" type="HBoxContainer" parent="Menu/Page"]
visible = false
margin_left = 155.0
margin_right = 754.0
margin_bottom = 401.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/Page/ThirdPage"]
margin_right = 599.0
margin_bottom = 401.0
rect_min_size = Vector2( 599, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/Page/ThirdPage/CenterContainer"]
margin_top = 52.0
margin_right = 599.0
margin_bottom = 348.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 7 )
stretch_mode = 1

[node name="ForthPage" type="HBoxContainer" parent="Menu/Page"]
visible = false
margin_left = 108.0
margin_right = 802.0
margin_bottom = 401.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/Page/ForthPage"]
margin_right = 694.0
margin_bottom = 401.0
rect_min_size = Vector2( 599, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/Page/ForthPage/CenterContainer"]
margin_left = 47.0
margin_top = 92.0
margin_right = 646.0
margin_bottom = 308.0
rect_min_size = Vector2( 176, 176 )
texture = ExtResource( 12 )
stretch_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu/Page"]
margin_left = 767.0
margin_right = 827.0
margin_bottom = 401.0
alignment = 1

[node name="FowardButton" parent="Menu/Page/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 161.0
margin_bottom = 239.0

[node name="PageDisplay" type="CenterContainer" parent="Menu"]
margin_top = 405.0
margin_right = 839.0
margin_bottom = 425.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pag1" type="TextureRect" parent="Menu/PageDisplay"]
margin_left = 364.0
margin_right = 474.0
margin_bottom = 20.0
texture = ExtResource( 5 )

[node name="Pag2" type="TextureRect" parent="Menu/PageDisplay"]
visible = false
margin_left = 364.0
margin_right = 474.0
margin_bottom = 20.0
texture = ExtResource( 8 )

[node name="Pag3" type="TextureRect" parent="Menu/PageDisplay"]
visible = false
margin_left = 364.0
margin_right = 474.0
margin_bottom = 20.0
texture = ExtResource( 10 )

[node name="Pag4" type="TextureRect" parent="Menu/PageDisplay"]
visible = false
margin_left = 364.0
margin_right = 474.0
margin_bottom = 20.0
texture = ExtResource( 9 )

[node name="Exit" type="TextureButton" parent="."]
margin_left = 756.81
margin_top = 45.0
margin_right = 810.81
margin_bottom = 100.0
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/Page/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Menu/Page/VBoxContainer2/FowardButton" to="." method="_on_FowardButton_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
